src/test/deca/context/valid/objet/ClassWithOneVariable.deca
class OneVar{
    int z;
}
{
    OneVar var = new OneVar();
    var.z= 1200;
}