src/test/deca/context/invalid/sansObjet/BadType.deca
class A{
    int x;
}
class B{
    int y;
}
{
    A var = new B();
}